fix: make sure icons do not overlap text

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -387,6 +387,14 @@ $gt-size-avatar-mobi := em(32px)
       margin-bottom: em(8px)
       font-size: em(14px)
       position: relative
+    &-block-1
+      float: right
+      height: em(22px)
+      width: em(32px)
+    &-block-2
+      float: right
+      height: em(22px)
+      width: em(64px)
     &-username
       font-weight: 500
       color: $gt-color-main
